--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "url": "https://github.com/0xfe/vexflow/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-object-assign": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@open-wc/testing": "^2.5.17",
-    "@open-wc/testing-karma": "^3.4.3",
-    "babel-loader": "^8.0.6",
-    "browserify": "^16.5.0",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-object-assign": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@open-wc/testing": "^2.5.18",
+    "@open-wc/testing-karma": "^3.4.4",
+    "babel-loader": "^8.1.0",
+    "browserify": "^16.5.1",
     "canvas": "^2.6.1",
     "deepmerge": "^4.2.2",
     "docco": "^0.8.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
     "glob": "^7.1.6",
-    "grunt": "^1.0.4",
+    "grunt": "^1.1.0",
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
@@ -44,16 +44,16 @@
     "grunt-git": "^1.0.14",
     "grunt-release": "^0.14.0",
     "grunt-webpack": "^3.1.3",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jscs": "^3.0.7",
-    "jsdom": "^16.1.0",
+    "jsdom": "^16.2.2",
     "karma": "^5.1.0",
-    "npm": "^6.13.7",
-    "opentype.js": "^1.1.0",
-    "qunit": "^2.9.3",
+    "npm": "^6.14.5",
+    "opentype.js": "^1.3.3",
+    "qunit": "^2.10.0",
     "raphael": "^2.3.0",
-    "webpack": "^4.42.1",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "grunt stage",
@@ -77,6 +77,7 @@
     "tablature"
   ],
   "dependencies": {
-    "es-dev-server": "^1.54.1"
+    "diff-dom": "^4.1.6",
+    "es-dev-server": "^1.55.0"
   }
 }
