--- a/package.json
+++ b/package.json
@@ -66,11 +66,8 @@
     "generate:blessed": "node ./tools/generate_png_images.js ../releases ./build/images/blessed",
     "generate": "npm run generate:current && npm run generate:blessed",
     "diff": "./tools/visual_regression.sh",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:update-snapshots": "karma start --update-snapshots",
-    "test:prune-snapshots": "karma start --prune-snapshots",
-    "test:original": "npm run lint && npm run qunit && npm run generate && npm run diff"
+    "test": "npm run lint && npm run qunit && npm run generate && npm run diff",
+    "test:web-components": "karma start --coverage"
   },
   "homepage": "http://vexflow.com",
   "keywords": [
